# game-analysis

./: README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: tests.yml
notebooks/: dataset_creation.ipynb
